tests/positive/test_import.orb
import "util/io.orb";
import "../libs/clib.orb";
import "util/io.orb";
import "util/empty.orb";

fnc main () () {};

import "util/../util/io.orb";
import "util/io.orb";
import "util/empty.orb";