tests/negative/test_fnc_def_mismatch_decl.orb
fnc foo () i32;

fnc foo () () {};

fnc main () () {};